# importunate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  tarpaulin.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  release.yml
benches/: my_benchmark.rs
src/: cyclic_generator.rs  decomposer.rs  eai_optimized.rs  inner.rs  ioe_optimized.rs  lib.rs  solver.rs  swaps_iterator.rs
src/snapshots/: importunate__tests__combine.snap  importunate__tests__from_lesser.snap
tests/: version-numbers.rs
